--- a/pages/deportes/Baseball/referencias/Boston_redsox.html
+++ b/pages/deportes/Baseball/referencias/Boston_redsox.html
@@ -97,67 +97,65 @@ En 1916, Joe Wood se lesionó y Tris Speaker fue negociado, pero con Babe Ruth l
                 <th>SLG</th>
                 <th>OPS</th>
             </tr>
-        </thead>
-        <tbody>
             <tr>
                 <td>Philadelphia Phillies</td>
                 <td>NL</td>
-                <td>6</td>
-                <td>197</td>
-                <td>31</td>
-                <td>54</td>
-                <td>13</td>
-                <td>0</td>
-                <td>13</td>
-                <td>31</td>
-                <td>23</td>
-                <td>60</td>
-                <td>9</td>
+                <td>11</td>
+                <td>355</td>
+                <td>58</td>
+                <td>94</td>
+                <td>22</td>
                 <td>1</td>
-                <td>.274</td>
-                <td>.354</td>
-                <td>.538</td>
-                <td>.892</td>
-            </tr>
-            <tr>
-                <td>Arizona Diamondbacks</td>
-                <td>NL</td>
-                <td>5</td>
-                <td>168</td>
-                <td>30</td>
-                <td>44</td>
-                <td>6</td>
-                <td>0</td>
-                <td>13</td>
-                <td>29</td>
-                <td>21</td>
-                <td>47</td>
-                <td>7</td>
+                <td>23</td>
+                <td>55</td>
+                <td>43</td>
+                <td>99</td>
+                <td>15</td>
                 <td>3</td>
-                <td>.262</td>
+                <td>.265</td>
                 <td>.347</td>
-                <td>.530</td>
-                <td>.877</td>
+                <td>.527</td>
+                <td>.874</td>
             </tr>
             <tr>
                 <td>Texas Rangers</td>
                 <td>AL</td>
-                <td>6</td>
-                <td>213</td>
-                <td>34</td>
-                <td>57</td>
-                <td>16</td>
-                <td>1</td>
-                <td>8</td>
-                <td>31</td>
-                <td>28</td>
-                <td>57</td>
-                <td>3</td>
+                <td>10</td>
+                <td>347</td>
+                <td>51</td>
+                <td>88</td>
+                <td>19</td>
+                <td>2</td>
+                <td>15</td>
+                <td>47</td>
+                <td>39</td>
+                <td>86</td>
+                <td>5</td>
                 <td>0</td>
-                <td>.268</td>
-                <td>.354</td>
-                <td>.465</td>
-                <td>.819</td>
+                <td>.254</td>
+                <td>.332</td>
+                <td>.450</td>
+                <td>.782</td>
+            </tr>
+            <tr>
+                <td>Houston Astros</td>
+                <td>AL</td>
+                <td>9</td>
+                <td>312</td>
+                <td>47</td>
+                <td>78</td>
+                <td>10</td>
+                <td>1</td>
+                <td>18</td>
+                <td>46</td>
+                <td>29</td>
+                <td>74</td>
+                <td>2</td>
+                <td>0</td>
+                <td>.250</td>
+                <td>.319</td>
+                <td>.462</td>
+                <td>.781</td>
             </tr>
             <tr>
                 <td>Milwaukee Brewers</td>
@@ -180,24 +178,24 @@ En 1916, Joe Wood se lesionó y Tris Speaker fue negociado, pero con Babe Ruth l
                 <td>.767</td>
             </tr>
             <tr>
-                <td>Houston Astros</td>
-                <td>AL</td>
-                <td>5</td>
-                <td>169</td>
-                <td>20</td>
-                <td>41</td>
-                <td>4</td>
-                <td>0</td>
+                <td>Arizona Diamondbacks</td>
+                <td>NL</td>
                 <td>10</td>
-                <td>20</td>
-                <td>11</td>
-                <td>44</td>
-                <td>1</td>
+                <td>332</td>
+                <td>42</td>
+                <td>78</td>
+                <td>13</td>
                 <td>0</td>
-                <td>.243</td>
-                <td>.293</td>
-                <td>.444</td>
-                <td>.737</td>
+                <td>16</td>
+                <td>41</td>
+                <td>35</td>
+                <td>97</td>
+                <td>8</td>
+                <td>3</td>
+                <td>.235</td>
+                <td>.311</td>
+                <td>.419</td>
+                <td>.730</td>
             </tr>
             <tr>
                 <td>Baltimore Orioles</td>
@@ -252,7 +250,6 @@ En 1916, Joe Wood se lesionó y Tris Speaker fue negociado, pero con Babe Ruth l
                 <td>1</td>
                 <td>5</td>
                 <td>19</td>
-                <td>0</td>
                 <td>0</td>
                 <td>.227</td>
                 <td>.292</td>
@@ -310,6 +307,7 @@ En 1916, Joe Wood se lesionó y Tris Speaker fue negociado, pero con Babe Ruth l
                 <td>0</td>
                 <td>0</td>
                 <td>1</td>
+                <td>1</td>
                 <td>18</td>
                 <td>0</td>
                 <td>0</td>
@@ -342,14 +340,14 @@ En 1916, Joe Wood se lesionó y Tris Speaker fue negociado, pero con Babe Ruth l
     </table>
     
     <!-- Enlace al video de YouTube -->
-    <h2>Video</h2>
+    <!--<h2>Video</h2>
     <p>
         Poseedores de nueve trofeos de Serie Mundial, los Boston Red Sox es un equipo con gran historia. Los invitamos a ver el siguiente video para su deleite y conocimiento del mejor deporte del mundo.
     </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/pdGo7bLxFs0?si=EV7uXiigasGjveXE" frameborder="0" allowfullscreen></iframe>
     
     <!-- Botón "Volver a la página principal" -->
-    <a class="volver" href="../../home_pages.html">Volver a la página principal</a>
+    <a class="volver" href="../home_baseball.html">Volver a la página principal</a>
 
 </body>
 </html>
