--- a/pages/deportes/Baseball/referencias/baltimore_orioles.html
+++ b/pages/deportes/Baseball/referencias/baltimore_orioles.html
@@ -45,7 +45,7 @@
 
     </style>
 </head>
-<script src="scroll.js"></script>
+<script src="/pages/deportes/Baseball/referencias/scroll.js"></script>
 
 <body>
     <h1>Baltimore Orioles</h1>
@@ -332,14 +332,14 @@
     </table>
     
     <!-- Enlace al video de YouTube -->
-    <h2>Video</h2>
+    <!--<h2>Video</h2>
     <p>
         Poseedores de tres trofeos de Serie Mundial, los Orioles de Baltimore son un equipo muy bonito de conocer. Los invitamos a ver el siguiente video para su deleite y conocimiento del mejor deporte del mundo.
     </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/hzQ4e6Nr45A" frameborder="0" allowfullscreen></iframe>
     
     <!-- Botón "Volver a la página principal" -->
-    <a class="volver" href="../../home_pages.html">Volver a la página principal</a>
+    <a class="volver" href="../home_baseball.html">Volver a la página principal</a>
 
 </body>
 </html>
