--- a/pages/deportes/Baseball/referencias/washington_nationals.html
+++ b/pages/deportes/Baseball/referencias/washington_nationals.html
@@ -98,26 +98,6 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <th>OPS</th>
               </tr>
               <tr>
-                <td>Texas Rangers</td>
-                <td>AL</td>
-                <td>12</td>
-                <td>426</td>
-                <td>71</td>
-                <td>113</td>
-                <td>22</td>
-                <td>2</td>
-                <td>22</td>
-                <td>67</td>
-                <td>47</td>
-                <td>104</td>
-                <td>9</td>
-                <td>0</td>
-                <td>.265</td>
-                <td>.344</td>
-                <td>.481</td>
-                <td>.825</td>
-            </tr>
-            <tr>
                 <td>Philadelphia Phillies</td>
                 <td>NL</td>
                 <td>13</td>
@@ -136,8 +116,28 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.333</td>
                 <td>.488</td>
                 <td>.821</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
+                <td>Texas Rangers</td>
+                <td>AL</td>
+                <td>17</td>
+                <td>600</td>
+                <td>97</td>
+                <td>151</td>
+                <td>29</td>
+                <td>3</td>
+                <td>30</td>
+                <td>91</td>
+                <td>66</td>
+                <td>148</td>
+                <td>10</td>
+                <td>0</td>
+                <td>.252</td>
+                <td>.332</td>
+                <td>.460</td>
+                <td>.792</td>
+              </tr>
+              <tr>
                 <td>Houston Astros</td>
                 <td>AL</td>
                 <td>11</td>
@@ -156,8 +156,8 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.325</td>
                 <td>.451</td>
                 <td>.776</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Milwaukee Brewers</td>
                 <td>NL</td>
                 <td>2</td>
@@ -176,28 +176,28 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.385</td>
                 <td>.382</td>
                 <td>.767</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Arizona Diamondbacks</td>
                 <td>NL</td>
-                <td>12</td>
-                <td>401</td>
-                <td>51</td>
-                <td>99</td>
-                <td>15</td>
-                <td>1</td>
-                <td>18</td>
-                <td>50</td>
-                <td>40</td>
-                <td>116</td>
-                <td>16</td>
-                <td>3</td>
-                <td>.247</td>
-                <td>.317</td>
-                <td>.424</td>
-                <td>.741</td>
-            </tr>
-            <tr>
+                <td>17</td>
+                <td>575</td>
+                <td>73</td>
+                <td>146</td>
+                <td>25</td>
+                <td>2</td>
+                <td>21</td>
+                <td>72</td>
+                <td>56</td>
+                <td>157</td>
+                <td>23</td>
+                <td>4</td>
+                <td>.254</td>
+                <td>.320</td>
+                <td>.414</td>
+                <td>.734</td>
+              </tr>
+              <tr>
                 <td>Baltimore Orioles</td>
                 <td>AL</td>
                 <td>3</td>
@@ -216,8 +216,8 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.301</td>
                 <td>.388</td>
                 <td>.689</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Minnesota Twins</td>
                 <td>AL</td>
                 <td>6</td>
@@ -236,8 +236,8 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.319</td>
                 <td>.353</td>
                 <td>.672</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Toronto Blue Jays</td>
                 <td>AL</td>
                 <td>2</td>
@@ -256,8 +256,8 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.292</td>
                 <td>.242</td>
                 <td>.534</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Atlanta Braves</td>
                 <td>NL</td>
                 <td>4</td>
@@ -276,8 +276,8 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.255</td>
                 <td>.264</td>
                 <td>.519</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Los Angeles Dodgers</td>
                 <td>NL</td>
                 <td>3</td>
@@ -296,8 +296,8 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.248</td>
                 <td>.250</td>
                 <td>.498</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Tampa Bay Rays</td>
                 <td>AL</td>
                 <td>2</td>
@@ -316,8 +316,8 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.227</td>
                 <td>.246</td>
                 <td>.473</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
                 <td>Miami Marlins</td>
                 <td>NL</td>
                 <td>2</td>
@@ -336,12 +336,12 @@ Con una combinación de talento joven y experimentado, los Washington Nationals 
                 <td>.219</td>
                 <td>.242</td>
                 <td>.461</td>
-            </tr>
+              </tr>
         </tbody>
     </table>
 
 <!-- Agrega el iframe para la página de MLB aquí -->
-<iframe src=" " width="100%" height="800" frameborder="0"></iframe>
+<iframe src="https://www.mlb.com/es/nationals/video/?q=BattingTeamID+%3D%3D+%5B120%5D+AND+HitResult+%3D+%5B%22Home+Run%22%5D+Order+By+Timestamp+DESC" width="100%" height="800" frameborder="0"></iframe>
 
     
 <!-- Botón "Volver a la página principal" -->
