--- a/pages/deportes/Baseball/home_baseball.html
+++ b/pages/deportes/Baseball/home_baseball.html
@@ -447,7 +447,7 @@
             </div>
         </div>
     </div>
-    <iframe src="/pages/deportes/Baseball/tablapuntos/puntos_home.html" frameborder="0" width="100%" height="400"></iframe>
+    <iframe class="iframe" src="/pages/deportes/Baseball/tablapuntos/puntos_home.html" frameborder="0" width="100%" height="400"></iframe>
 
     <script>
         // Array de textos que quieres mostrar
