--- a/login/login.html
+++ b/login/login.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title><style>
-        body 
-        {
-            background: #3ca0df; /* Fallback color for old browsers */
-            background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #134964, #0e4058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    <title>login</title>
+    <style>
+        video {
+            
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: fixed;
         }
+
+        body {
+            background-image: url("Greatest\ Sports\ Moments.mp4");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-position: fixed;
+        }
+
     </style>
 </head>
 <body>
-    
+    <video src="" autoplay muted object-fit="cover"></video>
 </body>
 </html>
