Carrouseles para Home

--- a/home/home.html
+++ b/home/home.html
@@ -38,6 +38,36 @@
             multimedia con tus deportes favoritos, 
         </p>
     </div>
+
+    <div class="carousel-container">
+        <div class="carousel" id="deportivas">
+            <h2>Noticias Deportivas</h2>
+            <div class="carousel-inner">
+                <div><img src="./asets/noticias/instituto.png" alt="Noticia 1"></div>
+                <div><img src="./asets/noticias/lanus.png" alt="Noticia 2"></div>
+                <div><img src="./asets/noticias/newells.png" alt="Noticia 3"></div>
+            </div>
+        </div>
+
+        <div class="carousel" id="fechas">
+            <h2>Fechas y Horarios de Deportes</h2>
+            <div class="carousel-inner">
+                <div><img src="./asets/fechas_horarios/argentinos.png" alt="Noticia 2"></div>
+                <div><img src="./asets/fechas_horarios/arsenal.png" alt="Noticia 1"></div>
+                <div><img src="./asets/fechas_horarios/atleticotucuman.png" alt="Noticia 3"></div>
+            </div>
+        </div>
+
+        <div class="carousel" id="publicidades">
+            <h2>Publicidades</h2>
+            <div class="carousel-inner">
+                <div><img src="./asets/boca.png" alt="Noticia 2"></div>
+                <div><img src="./asets/centralcordoba.png" alt="Noticia 1"></div>
+                <div><img src="./asets/colon.png" alt="Noticia 3"></div>
+
+            </div>
+        </div>
+    </div>
     
     <div class="texto-cambiante">
         <div class="cardcambiante">
@@ -74,5 +104,6 @@
         // Establecer un intervalo para cambiar el texto cada 30 segundos
         setInterval(cambiarTexto, 10000);
     </script>
+    <script src="carrousel.js"></script>
 </body>
 </html>
