--- a/home/home.html
+++ b/home/home.html
@@ -17,19 +17,19 @@
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button">
+        <button class="animated-button" onclick="window.location.href='../home_pages'">
             <span>inicio</span>
             <span></span>
         </button>
-        <button class="animated-button">
+        <button class="animated-button" onclick="window.location.href='../pages/deportes/home_deportes.html'">
             <span>deportes</span>
             <span></span>
         </button>
-        <button class="animated-button">
+        <button class="animated-button" onclick="window.location.href='../pages/biblioteca_videos/home_videos.html'">
             <span>biblioteca</span>
             <span></span>
         </button>
-        <button class="animated-button">
+        <button class="animated-button" onclick="window.location.href='../pages/estadisticas/home_estadisticas.html'">
             <span>estadisticas</span>
             <span></span>
         </button>
