--- a/home/home.html
+++ b/home/home.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button" onclick="window.location.href='../home_pages'">
+        <button class="animated-button" onclick="window.location.href='../pages/home_pages.html'">
             <span>inicio</span>
             <span></span>
         </button>
