--- a/login/login.html
+++ b/login/login.html
@@ -9,13 +9,11 @@
 <body>
   <div class="header">
     <img src="depologs_logo.jpeg" alt="Imagen" class="logo">
-</div>
-<div class="content">
-    <button onclick="window.location.href='../home/home.html'">Ingreso</button>
+    <button onclick="window.location.href='../home/home.html'" class="boton">Ingreso</button>
 </div>
 
 
-      <video class="video" src="./Greatest Sports Moments.mp4" autoplay="1" allowfullscreen muted></video>
+<video class="video" src="./Greatest Sports Moments.mp4" autoplay="1" muted></video>
 
       
 </body>
