--- a/home/home.html
+++ b/home/home.html
@@ -63,9 +63,11 @@
         <div class="carousel" id="publicidades">
             <h2>Publicidades</h2>
             <div class="carousel-inner">
-                <div><img src="./asets/boca.png" alt="Noticia 2"></div>
-                <div><img src="./asets/centralcordoba.png" alt="Noticia 1"></div>
-                <div><img src="./asets/colon.png" alt="Noticia 3"></div>
+                <div><img src="asets/12312312323.jpg" alt="Noticia 2"></div>
+                <div><img src="./asets/adidas-logo-adidas-icon-free-free-vector.jpg" alt="Noticia 1"></div>
+                <div><img src="./asets/Logo-de-Amazon.webp" alt="Noticia 3"></div>
+                <div><img src="./asets/descarga.png" alt="Noticia 3"></div>
+
 
             </div>
         </div>
