--- a/pages/biblioteca_videos/fotos counter/fotos_counter.html
+++ b/pages/biblioteca_videos/fotos counter/fotos_counter.html
@@ -410,7 +410,7 @@
     <script>
         // Array de textos que quieres mostrar
         const textos = ["EL FUTBOL SE JUEGA CON UNA PEROTA", "LA FORMULA 1 ES LA MAXIMA CATEGORIA DEL AUTOMIVILISMO",
-        "A LUCAS LE GUSTA EL PENE ", "EL PAN ESTA SOBREVALORADO"];
+        "sdfsdfsdfsdfsdf ", "EL PAN ESTA SOBREVALORADO"];
         let currentIndex = 0;
 
         // Función para cambiar el texto cada 2 minutos (120,000 milisegundos)
