--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -54,7 +54,7 @@
                         mientras los árbitros se ocupan de que las normas se cumplan correctamente. 
                         Es, ampliamente, considerado el deporte más popular del mundo, pues lo practican unas 270 millones de personas. 
                     </p>
-                    <button class="btn">llevame a futbol</button>
+                    <button class="btn" onclick="window.location.href = 'deportes/futbol/home_futbol.html'">llevame a Futbol</button>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
                     El balonmano, hándbol o handball, 
                     es un deporte de pelota en el que se enfrentan dos equipos y se caracteriza por transportar la pelota con las manos.
                 </p>
-                <button class="btn">llevame a handball</button>
+                <button class="btn" onclick="window.location.href = 'deportes/BalonMano/Presentacion/home_presentacion.html'">llevame a Handball</button>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                     El bádminton es un deporte de raqueta en el que se enfrentan dos jugadores o dos parejas situadas en las mitades opuestas de una pista rectangular dividida por una red.
                      A diferencia de otros deportes de raqueta en el bádminton no se juega con pelota, sino con un volante.
                 </p>
-                <button class="btn">llevame a badminton</button>
+                <button class="btn" onclick="window.location.href = 'deportes/badminton/index.html'">llevame a Badminton</button>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                 <p class="para">
                     El béisbol​, también llamado baseball o juego de pelota es un deporte de equipo jugado por dos equipos de nueve jugadores cada uno. 
                 </p>
-                <button class="btn">llevame a baseball</button>
+                <button class="btn" onclick="window.location.href = 'deportes/voley/home_voley.html'">llevame a Baseball</button>
                 </div>
             </div>
         </div>
