--- a/pages/biblioteca_videos/fotos f1/fotos_f1.html
+++ b/pages/biblioteca_videos/fotos f1/fotos_f1.html
@@ -376,7 +376,7 @@
     <script>
         // Array de textos que quieres mostrar
         const textos = ["EL FUTBOL SE JUEGA CON UNA PEROTA", "LA FORMULA 1 ES LA MAXIMA CATEGORIA DEL AUTOMIVILISMO",
-        "A LUCAS LE GUSTA EL PENE ", "EL PAN ESTA SOBREVALORADO"];
+        "adasdasdasdasd ", "EL PAN ESTA SOBREVALORADO"];
         let currentIndex = 0;
 
         // Función para cambiar el texto cada 2 minutos (120,000 milisegundos)
