--- a/home/home.html
+++ b/home/home.html
@@ -128,7 +128,7 @@
       </script>
       <script>
         // Array de fechas importantes
-        const fechasImportantes = ["25 de diciembre: Navidad", "1 de enero: Año Nuevo", "2 de abril: Día de la Memoria"];
+        const fechasImportantes = ["Qué pasa con Lionel Scaloni: el detrás de las dudas por su continuidad en la Selección Argentina", "Se conoció lo que le dijo Messi a Rodrygo en el tenso cruce que tuvieron en el clásico entre la Selección Argentina y Brasil", "El ídolo y actual secretario deportivo del Millonario habló sobre el Muñeco, aquellos rumores que lo vinculaban con la política del club y hasta la posibilidad de que vuelva como DT. Además, aseguró que no me dio felicidad que Boca haya perdido la Libertadores"];
       
         // Función para cambiar el texto cada 10 segundos
         function cambiarTexto() {
