mejoras en home

--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
 <body>
   <div class="header">
     <img src="./login/depologs_logo.jpeg" alt="Imagen" class="logo">
-    <button onclick="window.location.href='./home/home.html'" class="boton">Ingreso</button>
+    <button onclick="window.location.href='./Depologs_tp/home/home.html'" class="boton">Ingreso</button>
 </div>
 
 
-<video class="video" src="./login/ Sports Moments.mp4" autoplay="1" muted></video>
+<video class="video" src="./login/Greatest Sports Moments.mp4" autoplay="1" muted></video>
 
       
 </body>
