--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/login/login.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Depologs</title>
+    <title>LOGIN DEPOLOGS</title>
 </head>
 <body>
   <div class="header">
