--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="home_pages.css">
     <link rel="stylesheet" href="botones.css">
     <link rel="stylesheet" href="cartas_de_presentacion.css">
-    <link rel="stylesheet" href="carta f1.css">
+    <!--<link rel="stylesheet" href="carta f1.css">-->
     <link rel="stylesheet" href="menu.css">
     <!--llamado a los scripts-->
     <!--coasitas del mismo html no tocar-->
@@ -50,9 +50,6 @@
                         FUTBOL
                     </p>
                     <p class="para">
-                        El fútbol, futbol​ o balompié​ es un deporte de equipo jugado entre dos conjuntos de once jugadores cada uno, 
-                        mientras los árbitros se ocupan de que las normas se cumplan correctamente. 
-                        Es, ampliamente, considerado el deporte más popular del mundo, pues lo practican unas 270 millones de personas. 
                     </p>
                     <button class="btn" onclick="window.location.href = 'deportes/futbol/home_futbol.html'">llevame a Futbol</button>
                 </div>
@@ -65,8 +62,6 @@
                     HANDBALL
                 </p>
                 <p class="para">
-                    El balonmano, hándbol o handball, 
-                    es un deporte de pelota en el que se enfrentan dos equipos y se caracteriza por transportar la pelota con las manos.
                 </p>
                 <button class="btn" onclick="window.location.href = 'deportes/BalonMano/Presentacion/home_presentacion.html'">llevame a Handball</button>
                 </div>
@@ -79,8 +74,6 @@
                     BADMINTON
                 </p>
                 <p class="para">
-                    El bádminton es un deporte de raqueta en el que se enfrentan dos jugadores o dos parejas situadas en las mitades opuestas de una pista rectangular dividida por una red.
-                     A diferencia de otros deportes de raqueta en el bádminton no se juega con pelota, sino con un volante.
                 </p>
                 <button class="btn" onclick="window.location.href = 'deportes/badminton/index.html'">llevame a Badminton</button>
                 </div>
@@ -93,7 +86,6 @@
                     BASEBALL
                 </p>
                 <p class="para">
-                    El béisbol​, también llamado baseball o juego de pelota es un deporte de equipo jugado por dos equipos de nueve jugadores cada uno. 
                 </p>
                 <button class="btn" onclick="window.location.href = 'deportes/Baseball/home_baseball.html'">llevame a Baseball</button>
                 </div>
@@ -106,9 +98,6 @@
                         TENIS
                     </p>
                     <p class="para">
-                        Deporte que se practica entre dos jugadores o dos parejas en una pista rectangular dividida transversalmente por una red;
-                         consiste en impulsar una pelota con una raqueta por encima de la red intentando que bote en el campo contrario y que el adversario no la pueda devolver;
-                         los partidos se disputan a tres o cinco sets siguiendo un complejo sistema de puntuación. 
                     </p>
                     <button class="btn">llevame a tenis</button>
                 </div>
@@ -121,12 +110,6 @@
                     VOLEY
                 </p>
                 <p class="para">
-                    nuestros deportes 
-                </p>
-                <button class="btn">Read more</button>
-                    El voleibol, vóleibol, volibol, vólibol, balonvolea o simplemente vóley ​ es un deporte que se juega con una pelota y en el que dos equipos, 
-                    integrados por seis jugadores cada uno, 
-                    se enfrentan sobre una área de juego separada por una red central. 
                 </p>
                 <button class="btn" onclick="window.location.href = 'deportes/voley/home_voley.html'">llevame a Voley</button>
 
@@ -139,10 +122,7 @@
                     <p class="heading">
                         E-SPORT COUNTER STRIKE
                     </p>
-                    <p class="para">
-                        Counter-Strike es una serie de videojuegos tácticos multijugador de disparos en primera persona en los que equipos de terroristas luchan 
-                        para perpetrar un acto de terror mientras que los contraterroristas intentan prevenirlo. La serie comenzó en Windows en 1999 con el lanzamiento del primer juego, 
-                        Counter-Strike. 
+                    <p class="para"> 
                     </p>
                     <button class="btn">llevame a counter strike</button>
                 </div>
@@ -155,9 +135,6 @@
                     F1
                 </p>
                 <p class="para">
-                    El Campeonato Mundial de Fórmula 1 de la FIA, más conocido como Fórmula 1, F1 o Fórmula Uno, 
-                    es la principal competición de automovilismo internacional y el campeonato de deportes de motor más popular y prestigioso del mundo. 
-                    La entidad que la dirige es la Federación Internacional del Automóvil.
                 </p>
                 <button class="btn" onclick="window.location.href = 'deportes/f1/home_f1.html'">llevame a f1</button>
                 </div>
@@ -170,9 +147,6 @@
                         E-SPORT VALORANT
                     </p>
                     <p class="para">
-                        Valorant es un hero shooter en primera persona multijugador gratuito desarrollado y publicado por Riot Games. 
-                        El juego se anunció por primera vez con el nombre en clave Project A en octubre de 2019. 
-                        Fue lanzado para Microsoft Windows el 2 de junio de 2020 después de su beta cerrada lanzada el 7 de abril de 2020.
                     </p>
                     <button class="btn">llevame a valorant</button>
                 </div>
