login con video

--- a/login.html
+++ b/login.html
@@ -9,7 +9,24 @@
 <body>
   <div class="header">
     <img src="./login/depologs_logo.jpeg" alt="Imagen" class="logo">
-    <button onclick="window.location.href='./Depologs_tp/home/home.html'" class="boton">Ingreso</button>
+    <form action="input" class="inicio">
+      <h2>Iniciar Sesión</h2><br/>
+      <label for="usuario"><b>Usuario: </b></label><br />
+      <span>
+
+      </span>
+      <input type="text" placeholder="Nombre de Usuario" name="usuario" required class="etq"><br />
+      <span>
+
+      </span>
+      <label for="password"><b>Contraseña: </b></label><br />
+      <span>
+
+      </span>
+      <input type="password" placeholder="Contraseña" name="pass" required class="etq"><br />
+      <button onclick="window.location.href='./Depologs_tp/home/home.html'" class="boton">Ingreso</button>
+    </form>
+    
 </div>
 
 
