--- a/home/home.html
+++ b/home/home.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <div class="botonera">
+        <img class="idp" src="./recursos/WhatsApp Image 2023-10-31 at 19.36.45.jpeg" alt="">
         <button class="animated-button" onclick="window.location.href='../pages/home_pages.html'">
             <span>inicio</span>
             <span></span>
