--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 
       </span>
       <input type="password" placeholder="Contraseña" name="pass" required class="etq"><br />
-      <button onclick="window.location.href='./Depologs_tp/home/home.html'" class="boton">Ingreso</button>
+      <button class="boton">Ingreso</button>
     </form>
     
 </div>
