--- a/login.html
+++ b/login.html
@@ -22,7 +22,8 @@
       <form class="formulario">
           <h2 class="create-account">Crear una cuenta</h2>
           <div class="iconos">
-              <div class="border-icon">
+            <img class="logo" src="./login/depologs_logo.jpeg" alt="">
+              <!--<div class="border-icon">
                   <i class='bx bxl-instagram'></i>
               </div>
               <div class="border-icon">
@@ -30,7 +31,7 @@
               </div>
               <div class="border-icon">
                   <i class='bx bxl-facebook-circle' ></i>
-              </div>
+              </div>-->
           </div>
           <p class="cuenta-gratis">Crear una cuenta</p>
           <input type="text" placeholder="Nombre">
@@ -43,7 +44,8 @@
         <form class="formulario">
             <h2 class="create-account">Iniciar Sesion</h2>
             <div class="iconos">
-                <div class="border-icon">
+                <img class="logo2" src="./login/depologs_logo.jpeg" alt="">
+                <!--<div class="border-icon">
                     <i class='bx bxl-instagram'></i>
                 </div>
                 <div class="border-icon">
@@ -51,12 +53,12 @@
                 </div>
                 <div class="border-icon">
                     <i class='bx bxl-facebook-circle' ></i>
-                </div>
+                </div>-->
             </div>
             <p class="cuenta-gratis">¿Aun no tienes una cuenta?</p>
             <input type="email" placeholder="Email">
             <input type="password" placeholder="Contraseña">
-            <input type="button" value="Iniciar Sesion">
+            <input type="button" value="Iniciar Sesion" onclick="window.location.href='./home/home.html'">
         </form>
         <div class="welcome-back">
             <div class="message">
