--- a/home/home.html
+++ b/home/home.html
@@ -22,19 +22,19 @@
     <div class="botonera">
         <img class="idp" src="./recursos/WhatsApp Image 2023-10-31 at 19.36.45.jpeg" alt="">
         <button class="animated-button" onclick="window.location.href='../pages/home_pages.html'">
-            <span>inicio</span>
+            <span>INICIO</span>
             <span></span>
         </button>
         <button class="animated-button" onclick="window.location.href='../pages/deportes/home_deportes.html'">
-            <span>deportes</span>
+            <span>DEPORTES</span>
             <span></span>
         </button>
         <button class="animated-button" onclick="window.location.href='../pages/biblioteca_videos/home_videos.html'">
-            <span>biblioteca</span>
+            <span>BIBLIOTECA</span>
             <span></span>
         </button>
         <button class="animated-button" onclick="window.location.href='../pages/estadisticas/home_estadisticas.html'">
-            <span>estadisticas</span>
+            <span>ESTADISTICAS</span>
             <span></span>
         </button>
     </div>
@@ -203,7 +203,7 @@
             "badminton",
             "baseball", 
             "tenis",
-            ""
+            "voley",
         ];
         
         // Función para cambiar el texto cada 10 segundos
